# molkentin-the-book-of-qt4

./: CMakeLists.txt  README.md
chapter01/gridLayout/: main.cpp
chapter01/helloWorld/: main.cpp
chapter01/layout/: main.cpp
chapter01/signalSlot/: main.cpp
chapter01/signalSlot2/: main.cpp
chapter02/byteConverter/: ByteConverterDialog.cpp  ByteConverterDialog.h  main.cpp
chapter02/byteConverter2/: ByteConverter.cpp  ByteConverter.h  ByteConverterDialog.cpp  ByteConverterDialog.h  main.cpp
chapter03/autoconnect/: byteconverterdialog.cpp  byteconverterdialog.h  byteconverterdialog.ui  main.cpp
chapter03/inherit/: byteconverterdialog.cpp  byteconverterdialog.h  main.cpp
chapter03/member/: byteconverterdialog.cpp  byteconverterdialog.h
chapter03/simple/: byteconverterdialog.ui  main.cpp
